<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvChangeMobileNoDialogMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:textSize="@dimen/text_size_16sp"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/etChangeMobileNoDialogUniqueID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_fp_etUID_top_margin"
        android:background="@drawable/edittext_background"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:hint="@string/enter_unique_id"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:textSize="@dimen/text_size_14sp"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_fp_etUID_top_margin"
        android:visibility="gone"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etChangeMobileNoDialogCountrycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.3"
            android:background="@drawable/edittext_background"
            android:digits="0123456789"
            android:hint="+91"
            android:inputType="phone"
            android:maxLength="4"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/etChangeMobileNoDialogMobileNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/edittext_background"
            android:digits="0123456789+"
            android:hint="@string/etnew_mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Small" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/note_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/note_mobile_no_validation"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/mahindra_gray" />
</LinearLayout>