<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_otp2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mahindra.be_lms.activities.OTPActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/enter_otp_tv"
        android:textSize="@dimen/textTitle"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiOtpEdittext"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dialog_layout_padding">

        <EditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:inputType="text|textCapCharacters"
            android:maxLength="4" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnOTPConfirm"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiOtpEdittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/otp_activity_paddingTop"
        android:text="@string/btn_confirm_otp"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/tvOTPResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnOTPConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium" />
</RelativeLayout>
