<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_mobile_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context="com.mahindra.be_lms.activities.ChangeMobileNumberActivity">

    <TextView
        android:id="@+id/tvChangeMobileNoTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/nav_mobile"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/custom_layout_padding_16dp"
        android:paddingRight="@dimen/custom_layout_padding_16dp"
        android:text="@string/change_mobile_nubmber"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tvChangeMobileNoTitle"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer_view"
        android:layout_below="@+id/view1"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiLoginMobile"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etChangeMobileCountryCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:digits="0123456789"
                    android:hint="+91"
                    android:inputType="phone"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <EditText
                    android:id="@+id/etChangeMobileNoMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:digits="0123456789"
                    android:hint="@string/etnew_mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_note_change_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/note_mobile_no_validation"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/mahindra_gray" />

        <Button
            android:id="@+id/btnChangeMobileNumber"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/btn_change_mobile_number"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <include
        android:id="@+id/footer_view"
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        />
</RelativeLayout>
