<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mahindra.be_lms.activities.ChangePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiChangePasswordOldPass"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_size_8dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/etChangePasswordOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter old password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_16sp"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiChangePasswordNewPass"
        style="@style/TextLabel"
        android:layout_margin="@dimen/margin_size_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etChangePasswordNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:imeOptions="actionNext"
            android:textSize="@dimen/text_size_16sp"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiChangePasswordConfirmPass"
        style="@style/TextLabel"
        android:layout_margin="@dimen/margin_size_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etChangePasswordConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_size_16sp"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnChangePasswordSubmit"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/otp_activity_paddingTop"
        android:text="@string/dialog_submit"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Medium" />
</LinearLayout>
